Make out-of-source build work
Caveats:
- bison/flex output still goes in the main source tree because we check
  it in.
- python/GraphQLParser still goes in the main source tree because it's
  used by example.py.
- I had to muck with include paths in a somewhat-unsatisfactory manner
  because we generate header files. Overall, still seems like an
  improvement, and we can always come back and fix include paths.

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -2,8 +2,8 @@
 IF (CTYPESGEN_FOUND)
   ADD_CUSTOM_COMMAND(
     OUTPUT GraphQLParser.py
-    COMMAND ctypesgen.py ../c/*.h -o GraphQLParser.py -l graphqlparser -L .. 2>&1 > /dev/null
-    DEPENDS ../c/GraphQLAstForEachConcreteType.h ../c/GraphQLAst.h
+    COMMAND ctypesgen.py ${CMAKE_CURRENT_SOURCE_DIR}/../c/*.h ${CMAKE_CURRENT_BINARY_DIR}/../c/*.h -o ${CMAKE_CURRENT_SOURCE_DIR}/GraphQLParser.py -I ${CMAKE_CURRENT_SOURCE_DIR}/.. -I ${CMAKE_CURRENT_BINARY_DIR}/.. -l graphqlparser -L ${CMAKE_CURRENT_BINARY_DIR}/.. 2>&1 > /dev/null
+    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/../c/GraphQLAstForEachConcreteType.h ${CMAKE_CURRENT_BINARY_DIR}/../c/GraphQLAst.h ${CMAKE_CURRENT_SOURCE_DIR}/../c/GraphQLAstNode.h ${CMAKE_CURRENT_SOURCE_DIR}/../c/GraphQLAstVisitor.h ${CMAKE_CURRENT_SOURCE_DIR}/../c/GraphQLParser.h
     )
   ADD_CUSTOM_TARGET(
     graphql-parser-python
