--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ before_install:
       && cd ..
       && rm gtest-1.7.0.zip
 
-script: cmake . -Dtest=ON && make && test/runTests
+script: mkdir build && cd build && cmake .. -Dtest=ON && make && test/runTests
