Suppress erroneous errors on OS X and Unix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,7 @@ IF (test)
   if(UNIX)
     # setup valgrind
     ADD_CUSTOM_TARGET(memcheck
-      valgrind --leak-check=full --dsymutil=yes --error-exitcode=1 ./test/runTests  >/dev/null
+      valgrind --leak-check=full --suppressions=./test/valgrind.supp --dsymutil=yes --error-exitcode=1 ./test/runTests  >/dev/null
     )
   endif()
 
