Adding pkg-config generation to CMakeLists
Adding the necessary magic to the CMakeLists.txt, including a new
version.cmake file that generates the pkg-config .pc file.

This file makes it much easier when building other applications/libraries
dependent on the installed package.

As an example, the short go version has also been updated to demonstrate
how compilers understanding pkg-config would make use of this file.

Additionally, added information on building and running the Go example to go/README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(libgraphqlparser C CXX)
 
+SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")
+
+INCLUDE(version)
+
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
 
 FIND_PACKAGE(PythonInterp 2 REQUIRED)
@@ -96,6 +100,17 @@ INSTALL(FILES
   DESTINATION include/graphqlparser)
 INSTALL(TARGETS graphqlparser
   LIBRARY DESTINATION lib)
+
+if (UNIX)
+  # generate pkgconfig file
+  include(FindPkgConfig QUIET)
+  if(PKG_CONFIG_FOUND)
+    # generate .pc and install
+    configure_file("libgraphqlparser.pc.in" "libgraphqlparser.pc" @ONLY)
+    install(FILES       "${CMAKE_CURRENT_BINARY_DIR}/libgraphqlparser.pc"
+            DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/pkgconfig")
+  endif()
+endif()
 
 IF (test)
   ADD_SUBDIRECTORY(test)
