--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,10 @@ before_install:
   # Versions of g++ prior to 4.8 don't have very good C++11 support.
   - sudo apt-get install -y g++-4.8
     && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-  - wget https://googletest.googlecode.com/files/gtest-1.7.0.zip
+  - wget https://codeload.github.com/google/googletest/zip/release-1.8.0
       && cd test
-      && unzip ../gtest-1.7.0.zip
+      && unzip ../release-1.8.0
       && cd ..
-      && rm gtest-1.7.0.zip
+      && rm release-1.8.0
 
 script: mkdir build && cd build && cmake .. -Dtest=ON && make && test/runTests && make memcheck
