tidy up bison/flex generation and use flex 2.6.2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,9 +44,8 @@ ADD_LIBRARY(graphqlparser SHARED
   c/GraphQLAstVisitor.h
   c/GraphQLAstVisitor.cpp
   c/GraphQLParser.cpp
-  parser.tab.hpp
-  parser.tab.cpp
-  lexer.cpp
+  ${BISON_graphqlparser_OUTPUTS}
+  ${FLEX_GraphQLScanner_OUTPUTS}
   lexer.h
   GraphQLParser.cpp)
 
