set CMAKE_BUILD_TYPE to Debug for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ before_install:
       && cd ..
       && rm release-1.8.0
 
-script: mkdir build && cd build && cmake .. -Dtest=ON && make && test/runTests && make memcheck
+script: mkdir build && cd build && cmake .. -Dtest=ON -DCMAKE_BUILD_TYPE=Debug && make && test/runTests && make memcheck
