Add the import .lib and the .pdb symbols to the installed files on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,4 +152,9 @@ if (UNIX)
     endif()
 
   ENDIF()
+elseif(WIN32)
+  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/graphqlparser.lib
+	DESTINATION lib)
+  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/graphqlparser.pdb
+	DESTINATION bin)
 endif()
