Get the unit tests building and passing on Windows

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,11 @@
-ADD_SUBDIRECTORY(googletest-release-1.8.0/googletest)
+IF(UNIX)
+  ADD_SUBDIRECTORY(googletest-release-1.8.0/googletest)
+  INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+ELSEIF(WIN32)
+  FIND_PACKAGE(GTest REQUIRED)
+ENDIF()
 
 ENABLE_TESTING()
-
-INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 FILE(COPY valgrind.supp DESTINATION .)
 
@@ -16,7 +19,11 @@ FILE(COPY schema-kitchen-sink.json DESTINATION .)
 
 ADD_EXECUTABLE(runTests ParserTests.cpp JsonVisitorTests.cpp BuildCAPI.c)
 
-TARGET_LINK_LIBRARIES(runTests gtest gtest_main)
+IF(UNIX)
+  TARGET_LINK_LIBRARIES(runTests gtest gtest_main)
+ELSEIF(WIN32)
+  TARGET_LINK_LIBRARIES(runTests GTest::GTest GTest::Main)
+ENDIF()
 
 TARGET_LINK_LIBRARIES(runTests graphqlparser)
 
