Search for ctypesgen if ctypesgen.py is not found.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ IF (NOT PYTHON_VERSION_MAJOR EQUAL 2)
 ENDIF()
 
 FIND_PROGRAM(CTYPESGEN_FOUND ctypesgen.py)
+IF (NOT CTYPESGEN_FOUND)
+  FIND_PROGRAM(CTYPESGEN_FOUND ctypesgen)
+ENDIF()
 
 FIND_PACKAGE(BISON 3)
 FIND_PACKAGE(FLEX)
