Fixed missing DESTINANTION on FILE COPY

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ ELSE()
     ${CMAKE_CURRENT_SOURCE_DIR}/parsergen/location.hh
     ${CMAKE_CURRENT_SOURCE_DIR}/parsergen/position.hh
     ${CMAKE_CURRENT_SOURCE_DIR}/parsergen/stack.hh
-    ${CMAKE_CURRENT_BINARY_DIR})
+    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 ENDIF()
 
 IF(FLEX_FOUND)
@@ -48,7 +48,7 @@ ELSE()
   FILE(COPY
     ${CMAKE_CURRENT_SOURCE_DIR}/parsergen/lexer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/parsergen/lexer.h
-    ${CMAKE_CURRENT_BINARY_DIR})
+    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 ENDIF()
 
 FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/c)
