--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,13 @@ INCLUDE(version)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
 
-FIND_PACKAGE(PythonInterp 2 REQUIRED)
+FIND_PACKAGE(PythonInterp 2)
 IF (NOT PYTHON_VERSION_MAJOR EQUAL 2)
-  MESSAGE(FATAL_ERROR "Python 2 is required.")
+  MESSAGE(WARNING "Python 2 is required.")
+ELSE()
+  FIND_PROGRAM(CTYPESGEN_FOUND ctypesgen.py)
 ENDIF()
 
-FIND_PROGRAM(CTYPESGEN_FOUND ctypesgen.py)
 
 FIND_PACKAGE(BISON 3)
 FIND_PACKAGE(FLEX)
